[project]
name = "video-download-api"
version = "1.0.0"
description = "FastAPI server for downloading videos from various platforms using yt-dlp"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.4",
    "yt-dlp[curl-cffi,default]>=2025.1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "httpx>=0.28.1",
]
