[project]
name = "video-download-api"
version = "1.0.0"
description = "FastAPI server for downloading videos from various platforms using yt-dlp"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "uvicorn[standard]>=0.40.0",
    "yt-dlp[curl-cffi,default]>=2025.12.8",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]